namespace Animals.App;

public abstract class Animal
{
    public string name;
}