namespace Animals.App;

public class Fish : Animal
{
    
}