namespace Animals.App;

public interface IVoice
{
    public void Sound();
}