namespace Animals.App;

public class Spider : Animal
{
    
}